--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Website</title>
+    <title>My Diary</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
-    <p>This is a custom page built with HTML, CSS, and JavaScript.</p>
+    <div class="container">
+        <h1>My Diary</h1>
+        <form id="diaryForm">
+            <textarea id="diaryEntry" placeholder="Write your diary entry here..."></textarea>
+            <button type="submit">Save Entry</button>
+        </form>
+        <div id="entries">
+            <h2>Previous Entries</h2>
+            <ul id="entriesList"></ul>
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
