--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>极客侠GeeksMan - STM32教程</title>
+    <title>极客侠GeeksMan</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/styles/default.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.1/highlight.min.js"></script>
 </head>
 <body>
     <header>
+        <h1>极客侠GeeksMan</h1>
         <nav>
-            <div class="logo">极客侠GeeksMan</div>
             <ul>
                 <li><a href="#">首页</a></li>
-                <li><a href="#" class="active">STM32</a></li>
+                <li><a href="#">STM32</a></li>
                 <li><a href="#">ESP32</a></li>
             </ul>
-            <div class="search-container">
-                <input type="text" placeholder="搜索...">
-                <button type="submit">搜索</button>
-            </div>
         </nav>
     </header>
+    <div class="search-container">
+        <input type="text" placeholder="搜索...">
+        <button type="submit">搜索</button>
+    </div>
     <div class="container">
         <nav id="sidebar">
             <h2>STM32 教程</h2>
@@ -38,12 +36,6 @@
                 <!-- 文档内容会通过JavaScript动态加载 -->
             </div>
         </main>
-        <aside id="toc">
-            <h3>此页内容</h3>
-            <ul>
-                <!-- 目录项会通过JavaScript动态添加 -->
-            </ul>
-        </aside>
     </div>
     <script src="script.js"></script>
 </body>
